--- a/src/app/admin/genre/genre.component.html
+++ b/src/app/admin/genre/genre.component.html
@@ -19,7 +19,7 @@
   <!-- Id Column -->
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef>No.</th>
-    <td mat-cell *matCellDef="let element;let i = index;">{{ i+1 }}</td>
+    <td mat-cell *matCellDef="let element;let i = index;">{{ paginator.pageIndex * pagination.size + 1 +i}}</td>
   </ng-container>
 
   <!-- Name Column -->
