--- a/src/app/admin/movie/movie.component.html
+++ b/src/app/admin/movie/movie.component.html
@@ -1,1 +1,70 @@
-<p>movie works!</p>
+
+
+<div class="row mt-3 mb-3">
+    <div class="col-md-4">
+      <h3>Movie</h3>
+    </div>
+    <div class="col-md-8">
+      <button
+        mat-raised-button
+        color="accent"
+        class="float-end"
+        aria-label="Example icon button with a home icon"
+        (click)="openModal()"
+      >
+        Add Movie <mat-icon>add</mat-icon>
+      </button>
+    </div>
+  </div>
+
+  <table mat-table [dataSource]="dataSource$" class="mat-elevation-z8">
+    <!-- Id Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>No.</th>
+      <td mat-cell *matCellDef="let element;let i = index;">{{ paginator.pageIndex * pagination.size + 1 +i}}</td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
+
+      <!-- City Column -->
+      <ng-container matColumnDef="language">
+        <th mat-header-cell *matHeaderCellDef>Language</th>
+        <td mat-cell *matCellDef="let element">{{ element.language }}</td>
+      </ng-container>
+        <!-- City Column -->
+    <ng-container matColumnDef="genre">
+      <th mat-header-cell *matHeaderCellDef>City</th>
+      <td mat-cell *matCellDef="let element">{{ element.genre.name }}</td>
+    </ng-container> 
+
+  <!-- Action column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let movie">
+        <mat-icon
+          fontIcon="edit"
+          class="cursor-pointer"
+          (click)="onEdit(movie)"
+        ></mat-icon>
+        <mat-icon
+          fontIcon="delete"
+          class="cursor-pointer"
+          (click)="onDelete(movie)"
+        ></mat-icon>
+      </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+  
+  
+  <mat-paginator [length]="pagination.totalPages"
+                [pageSize]="pagination.size"
+                [pageSizeOptions]="[pagination.size]"
+                aria-label="Select page">
+  </mat-paginator>
