--- a/src/app/admin/theatre/theatre.component.html
+++ b/src/app/admin/theatre/theatre.component.html
@@ -1,1 +1,74 @@
-<p>theatre works!</p>
+
+<div class="row mt-3 mb-3">
+    <div class="col-md-4">
+      <h3>Theatre</h3>
+    </div>
+    <div class="col-md-8">
+      <button
+        mat-raised-button
+        color="accent"
+        class="float-end"
+        aria-label="Example icon button with a home icon"
+        (click)="openModal()"
+      >
+        Add Theatre <mat-icon>add</mat-icon>
+      </button>
+    </div>
+  </div>
+
+  <table mat-table [dataSource]="dataSource$" class="mat-elevation-z8">
+    <!-- Id Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>No.</th>
+      <td mat-cell *matCellDef="let element;let i = index;">{{ paginator.pageIndex * pagination.size + 1 +i}}</td>
+    </ng-container>
+  
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
+
+      <!-- City Column -->
+      <ng-container matColumnDef="loc">
+        <th mat-header-cell *matHeaderCellDef>Location</th>
+        <td mat-cell *matCellDef="let element">{{ element.loc }}</td>
+      </ng-container>
+        <!-- City Column -->
+    <ng-container matColumnDef="city">
+      <th mat-header-cell *matHeaderCellDef>City</th>
+      <td mat-cell *matCellDef="let element">{{ element.city }}</td>
+    </ng-container>
+    <ng-container matColumnDef="phoneNo">
+      <th mat-header-cell *matHeaderCellDef>Phone No</th>
+      <td mat-cell *matCellDef="let element">{{ element.phoneNo }}</td>
+    </ng-container>
+    
+
+  <!-- Action column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Action</th>
+      <td mat-cell *matCellDef="let user">
+        <mat-icon
+          fontIcon="edit"
+          class="cursor-pointer"
+          (click)="onEdit(user)"
+        ></mat-icon>
+        <mat-icon
+          fontIcon="delete"
+          class="cursor-pointer"
+          (click)="onDelete(user)"
+        ></mat-icon>
+      </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+  
+  
+  <mat-paginator [length]="pagination.totalPages"
+                [pageSize]="pagination.size"
+                [pageSizeOptions]="[pagination.size]"
+                aria-label="Select page">
+  </mat-paginator>
