--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -31,7 +31,7 @@
                 </span>
              </div>
             </div>
-          <p class="float-md-right form-text">Create Account</p>
+          <a class="float-md-right form-text" routerLink="/register">Create Account</a>
             <button type="submit" class="btn btn-primary float-right">Login</button>
           </form>
     </div>
