--- a/src/app/user/register/register.component.html
+++ b/src/app/user/register/register.component.html
@@ -1,1 +1,65 @@
-<p>register works!</p>
+<div class="row justify-content-center align-items-center">
+    <div class="col-md-6">
+        <h1>Registration</h1>
+       <form class="row" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+        <input type="hidden" formControlName="id"/>
+        <mat-form-field class="col-12">
+            <mat-label>Name</mat-label>
+            <input matInput placeholder="Eg.John Doe" formControlName="name"  />
+            <mat-error *ngIf="registerForm.get('name')?.invalid && registerForm.get('name')?.touched && registerForm.get('name')?.hasError('required')">
+                Name Required
+            </mat-error>
+               <mat-error *ngIf="registerForm.get('name')?.invalid && registerForm.get('name')?.touched && registerForm.get('name')?.hasError('pattern')">
+                 Should contain only space and characters only
+               </mat-error>
+          </mat-form-field>
+         
+          <mat-form-field class="col-12">
+            <mat-label>Password</mat-label>
+            <input matInput placeholder="Eg.john@doe1234" type="password" formControlName="password" />
+            <mat-error *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched && registerForm.get('password')?.hasError('required')">
+                Name Required
+            </mat-error>
+               <mat-error *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched && registerForm.get('password')?.hasError('pattern')">
+                 Should contain one uppercase,one special characters eg.Geek@portal30
+               </mat-error>
+          </mat-form-field>
+          <mat-form-field class="col-12">
+            <mat-label>Email</mat-label>
+            <input matInput placeholder="Eg.john_doe@ex.com" formControlName="email"/>
+            <mat-error *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched && registerForm.get('email')?.hasError('required')">
+                Name Required
+            </mat-error>
+               <mat-error *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched && registerForm.get('email')?.hasError('email')">
+                 Should contain one uppercase,one special characters eg.Geek@portal30
+               </mat-error>
+          </mat-form-field>
+          <mat-form-field class="col-12">
+            <mat-label>Location</mat-label>
+            <input matInput placeholder="Eg.Delhi" formControlName="location"/>
+            <mat-error *ngIf="registerForm.get('location')?.invalid && registerForm.get('location')?.touched && registerForm.get('location')?.hasError('required')">
+              Name Required
+          </mat-error>
+             <mat-error *ngIf="registerForm.get('location')?.invalid && registerForm.get('location')?.touched && registerForm.get('location')?.hasError('pattern')">
+               Should contain only characters and spaces
+             </mat-error>
+             <mat-error *ngIf="registerForm.get('location')?.invalid && registerForm.get('location')?.touched && registerForm.get('location')?.hasError('incorrect')">should contain atleast min 5 characters</mat-error>
+          </mat-form-field>
+          <mat-form-field class="col-12">
+            <mat-label>Phone Number</mat-label>
+            <input matInput placeholder="Eg.983457890" formControlName="phoneNo"/>
+            <mat-error *ngIf="registerForm.get('phoneNo')?.invalid && registerForm.get('phoneNo')?.touched && registerForm.get('phoneNo')?.hasError('required')">
+              Name Required
+          </mat-error>
+             <mat-error *ngIf="registerForm.get('phoneNo')?.invalid && registerForm.get('phoneNo')?.touched && registerForm.get('phoneNo')?.hasError('pattern')">
+               Should contain only numbers.
+             </mat-error>
+          </mat-form-field>
+          <a routerLink="/login" class="float-md-right form-text">Have an account?</a>
+          <button mat-raised-button color="primary" [disabled]="registerForm.invalid">Register</button>
+       </form>
+    
+    
+    </div>
+    
+    </div>
