--- a/src/app/user/home/home.component.html
+++ b/src/app/user/home/home.component.html
@@ -1,9 +1,17 @@
 
 <div class="row">
-    <div class="col-md-4">Side bar</div>
+    <div class="col-md-4">
+        <div class="list-group" *ngIf="genre$|async as genreList">
+            <a [routerLink]="['/genre',genre.id]" routerLinkActive="active" class="list-group-item list-group-item-action" aria-current="true" *ngFor="let genre of genreList" >
+              {{genre.name}}
+            </a>
+          </div>
+    </div>
     <div class="col-md-8">
-        <p>home works!</p>
-        carousel
+        {{showCarousel}}
+        <p *ngIf="showCarousel">home works! carousel</p>
+        
+        <router-outlet></router-outlet>
     </div>
 </div>
 
