--- a/src/app/shared/admin-header/admin-header.component.html
+++ b/src/app/shared/admin-header/admin-header.component.html
@@ -16,7 +16,7 @@
                 <a class="nav-link" routerLink="/admin/movie">Add Movies</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">View All Movies</a>
+                <a class="nav-link" routerLink="/admin/movies">View All Movies</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" routerLink="/admin/logout">Logout</a>
