--- a/src/app/user/movies/movies.component.html
+++ b/src/app/user/movies/movies.component.html
@@ -1,1 +1,32 @@
-<p>movies works!</p>
+
+<shared-page-loader [isPageLoading]="isPageLoading"></shared-page-loader>
+<form class="row my-3" [formGroup]="searchForm">
+    <div class="col-md-4">
+        <input type="email" class="form-control" name="search"
+        formControlName="movieName"
+         placeholder="search by movie name"
+        aria-describedby="emailHelp">
+      </div>
+      <div class="col-md-4">
+        <select class="form-select" aria-label="Default select example" formControlName="genre">
+            <option selected>Search by genre</option>
+            <option *ngFor="let genre of genreSource$|async" [value]="genre.id">{{genre.name}}</option>
+          </select>
+      </div>
+      <div class="col-md-4">
+        <button class="btn btn-primary" (click)="resetSearch()">Reset Filters</button>
+      </div>
+      
+    </form>
+
+<div class="row">
+    <div class="col-md-3" *ngFor="let movie of dataSource$|async">
+        <shared-movie-card [movie]="movie" (onBookTicket)="bookTickets($event)" [showBookingBtn]="true"></shared-movie-card>
+    </div>
+</div>
+
+<mat-paginator [length]="pagination.totalPages"
+                [pageSize]="pagination.size"
+                [pageSizeOptions]="[pagination.size]"
+                aria-label="Select page">
+  </mat-paginator>
