--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -1,3 +1,10 @@
+
+<div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="loginFailure">
+    <strong>{{errorMsg}}</strong> 
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="loginFailure=false">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 <div class="container">
     <shared-login (loginFromEmit)="onSubmit($event)"></shared-login>
 </div>
